--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile project(':ahbottomnavigation')
     compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'me.dm7.barcodescanner:zxing:1.8.4'
 
 }
